--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
   "name": "Cotton_1",
-  "uuid": "f195e492-5c50-4964-a163-05b397f45913",
   "version": "3.4.2",
-  "creator": {
-    "version": "3.4.2"
+  "type": "module",
+  "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.16.0",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
+    "eslint": "^9.16.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.4.1",
+    "globals": "^15.12.0"
+  },
+  "eslintConfig": {
+    "root": true
   }
 }
